# CurseSystem

./: CMakeLists.txt  MySqlUtils.cpp  MySqlUtils.h  MyTableModel.cpp  MyTableModel.h  README.md  StuController.cpp  StuController.h  Student.cpp  Student.h  StudentDao.cpp  StudentDao.h  addchsui.cpp  addchsui.h  addchsui.ui  addcourseui.cpp  addcourseui.h  addcourseui.ui  addmajorui.cpp  addmajorui.h  addmajorui.ui  addstudentui.cpp  addstudentui.h  addstudentui.ui  chscontroller.cpp  chscontroller.h  chsdao.cpp  chsdao.h  coursecontroller.cpp  coursecontroller.h  coursedao.cpp  coursedao.h  main.cpp  mainui.cpp  mainui.h  mainui.ui  majorcontroller.cpp  majorcontroller.h  majordao.cpp  majordao.h  (+2 more)
res/: res.qrc
