cmake_minimum_required(VERSION 3.5)
project(coursesystem LANGUAGES CXX)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_PREFIX_PATH "E:/FrameWork/Qt6.8.1/6.8.1/mingw_64")
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
aux_source_directory(. SOURCES)
file(GLOB_RECURSE QRC_FILE ${CMAKE_SOURCE_DIR}/res/res.qrc)
file(GLOB_RECURSE HEADER_FILE ${CMAKE_SOURCE_DIR}/*.h)
find_package(Qt6 REQUIRED COMPONENTS Widgets )
find_package(Qt6 REQUIRED COMPONENTS Sql)
add_executable(${PROJECT_NAME}
    ${SOURCES} ${QRC_FILE}
)
target_link_libraries(${PROJECT_NAME} PUBLIC Qt6::Widgets Qt6::Sql)
